--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
             <div class="container">
                 <h2 class="section-title">About Me</h2>
                 <div class="about-content">
+                    <div class="about-image">
+                        <div class="profile-photo">
+                            <i class="fas fa-user"></i>
+                        </div>
+                    </div>
                     <div class="about-text">
                         <p>안녕하세요! 저는 웹 개발에 열정을 가진 개발자입니다. 사용자 중심의 디자인과 효율적인 코드 작성을 중요하게 생각하며, 새로운 기술을 배우는 것을 즐깁니다.</p>
                     </div>
