--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>포트폴리오 - 개발자</title>
+    <title>Portfolio - 임재현</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -14,7 +14,8 @@
         <div class="sidebar-header">
             <div class="profile-info">
                 <div class="profile-avatar">
-                    <i class="fas fa-user"></i>
+                    <img src="images/sidebar-profile.jpg" alt="Profile Photo" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <i class="fas fa-user" style="display: none;"></i>
                 </div>
                 <h3>임재현</h3>
                 <p>Back-End Developer</p>
@@ -59,7 +60,8 @@
                 <div class="about-content">
                     <div class="about-image">
                         <div class="profile-photo">
-                            <i class="fas fa-user"></i>
+                            <img src="images/main-profile.jpg" alt="Profile Photo" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                            <i class="fas fa-user" style="display: none;"></i>
                         </div>
                     </div>
                     <div class="about-text">
@@ -72,7 +74,7 @@
         <!-- 경험 섹션 -->
         <section id="experience" class="experience">
             <div class="container">
-                <h2 class="section-title">Work Experience</h2>
+                <h2 class="section-title">Experience</h2>
                 <div class="timeline">
                     <div class="timeline-item">
                         <div class="timeline-content">
