feat: 깃허브, 블로그 링크 추가

--- a/index.html
+++ b/index.html
@@ -39,14 +39,12 @@
                 <span>Certificates</span>
             </a></li>
         </ul>
-        <div class="sidebar-footer">
-            <div class="social-links-sidebar">
-                <a href="#" class="social-link-sidebar"><i class="fab fa-github"></i></a>
-                <a href="#" class="social-link-sidebar"><i class="fab fa-linkedin"></i></a>
-                <a href="#" class="social-link-sidebar"><i class="fab fa-twitter"></i></a>
-                <a href="#" class="social-link-sidebar"><i class="fab fa-instagram"></i></a>
-            </div>
-        </div>
+                 <div class="sidebar-footer">
+             <div class="social-links-sidebar">
+                 <a href="https://github.com/hyeonZIP" class="social-link-sidebar"><i class="fab fa-github"></i></a>
+                 <a href="https://until.blog/@hyeonzip" class="social-link-sidebar"><i class="fas fa-blog"></i></a>
+             </div>
+         </div>
     </nav>
 
     <!-- 메인 콘텐츠 영역 -->
