feat: About Me 내용 추가

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         </div>
                     </div>
                     <div class="about-text">
-                        <p>안녕하세요! 저는 웹 개발에 열정을 가진 개발자입니다. 사용자 중심의 디자인과 효율적인 코드 작성을 중요하게 생각하며, 새로운 기술을 배우는 것을 즐깁니다.</p>
+                         <p>안녕하세요, 백엔드 개발자 임재현(hyeonZIP) 입니다. 좋아하는 키워드는 <span class="highlight-keyword">확장 가능한 설계</span>, <span class="highlight-keyword">동작하는 클린 코드</span>이며, 이를 지키기 위해 고려 기술 스택과 디자인 패턴, 테스트 코드에 대해 고민합니다. 경계하는 키워드는 <span class="warning-keyword">당연히</span>, <a href="https://workingscorpion.notion.site/18ba87a296d880449599f97af1ca1845" target="_blank" class="warning-keyword-link"><span class="warning-keyword">기술 쇼핑</span><i class="fas fa-external-link-alt"></i></a>입니다. 개발에 있어서는 돈 쓰는 것을 주저하지 않습니다.</p>
                     </div>
                 </div>
             </div>
