feat: 사회 경험 추가

--- a/index.html
+++ b/index.html
@@ -94,28 +94,28 @@
                             <div class="timeline-header">
                                 <h3>(주)씨에이치소프트</h3>
                                 <span class="company">현장실습형 인턴</span>
-                                <span class="period">24.06.23 - 24.07.29</span>
+                                <span class="period">24.06.26 - 24.07.12</span>
                             </div>
-                            <p>다양한 웹 프로젝트에 참여하며 실무 경험을 쌓았습니다. 사용자 피드백을 바탕으로 지속적인 개선을 진행했습니다.</p>
+                            <p>사내 서비스 셀리어스(Sellius)의 링크윈(LinkWeen)의 필터링 기능을 추가하였습니다.</p>
                             <ul>
-                                <li>반응형 웹사이트 개발</li>
-                                <li>데이터베이스 설계 및 구현</li>
-                                <li>API 통합 및 최적화</li>
+                                <li>Python Selenium을 활용한 웹 크롤링</li>
+                                <li>웹 크롤링 결과를 바탕으로 데이터베이스 설계 및 구현</li>
+                                <li>PHP 기반 웹 프로젝트에 필터링 기능 추가</li>
                             </ul>
                         </div>
                     </div>
                     <div class="timeline-item">
                         <div class="timeline-content">
                             <div class="timeline-header">
-                                <h3>경북 SW </h3>
+                                <h3>경북 네트워크형 캠퍼스 SW아카데미 4기</h3>
                                 <span class="company">교내 활동</span>
                                 <span class="period">24.01.23 - 24.05.29</span>
                             </div>
-                            <p>다양한 웹 프로젝트에 참여하며 실무 경험을 쌓았습니다. 사용자 피드백을 바탕으로 지속적인 개선을 진행했습니다.</p>
+                            <p>SpringBoot와 React 활용 교육과 팀장으로서 추천 알고리즘을 이용한 친구 매칭 플랫폼 프로젝트를 수행하였습니다.</p>
                             <ul>
-                                <li>반응형 웹사이트 개발</li>
-                                <li>데이터베이스 설계 및 구현</li>
-                                <li>API 통합 및 최적화</li>
+                                <li>ERD 설계</li>
+                                <li>REST API 개발</li>
+                                <li>협업 필터링기반 추천 알고리즘 개발</li>
                             </ul>
                         </div>
                     </div>
@@ -126,11 +126,10 @@
                                 <span class="company">현장실습형 인턴</span>
                                 <span class="period">23.12.26 - 24.02.16</span>
                             </div>
-                            <p>팀 리드로서 프로젝트 관리 및 개발을 담당했습니다. React와 Node.js를 활용한 웹 애플리케이션 개발 경험이 있습니다.</p>
+                            <p>사내 프로젝트 BI Manager인 데이터 품질관리 시스템을 개발하였습니다. Sping3와 Vue.js를 활용하였습니다.</p>
                             <ul>
-                                <li>팀 리드로서 5명의 개발자 관리</li>
-                                <li>React 기반 프론트엔드 개발</li>
-                                <li>Node.js 백엔드 API 개발</li>
+                                <li>REST API 개발</li>
+                                <li>Vue.js 기반 프론트엔드 개발</li>
                             </ul>
                         </div>
                     </div>
@@ -139,13 +138,12 @@
                             <div class="timeline-header">
                                 <h3>(주)엠엔비전</h3>
                                 <span class="company">근로 장학</span>
-                                <span class="period">2020 - 2022</span>
+                                <span class="period">23.07.03 - 23.08.31</span>
                             </div>
-                            <p>다양한 웹 프로젝트에 참여하며 실무 경험을 쌓았습니다. 사용자 피드백을 바탕으로 지속적인 개선을 진행했습니다.</p>
+                            <p>근로 장학생으로서 사내 업무 보조를 맡았습니다.</p>
                             <ul>
-                                <li>반응형 웹사이트 개발</li>
-                                <li>데이터베이스 설계 및 구현</li>
-                                <li>API 통합 및 최적화</li>
+                                <li>데이터 라벨링</li>
+                                <li>Unity MediaPipePlugin 개발 환경 구축</li>
                             </ul>
                         </div>
                     </div>
