feat: 프로젝트 내용 추가

--- a/index.html
+++ b/index.html
@@ -160,51 +160,75 @@
                         <div class="project-image">
                             <i class="fas fa-shopping-cart"></i>
                         </div>
-                        <div class="project-content">
-                            <h3>E-commerce Platform</h3>
-                            <p>React와 Node.js를 활용한 온라인 쇼핑몰 플랫폼입니다. 결제 시스템과 관리자 대시보드를 포함합니다.</p>
-                            <div class="project-tech">
-                                <span class="tech-tag">React</span>
-                                <span class="tech-tag">Node.js</span>
-                                <span class="tech-tag">MongoDB</span>
-                            </div>
-                            <div class="project-links">
-                                <a href="#" class="project-link"><i class="fab fa-github"></i> GitHub</a>
-                            </div>
+                             <div class="project-content">
+                             <h3>모바일 데이터 거래 플랫폼</h3>
+                             <div class="project-tech">
+                                 <span class="tech-tag">Spring Boot</span>
+                                 <span class="tech-tag">Spring WebSocket</span>
+                                 <span class="tech-tag">MySQL</span>
+                                 <span class="tech-tag">Redis</span>
+                                 <span class="tech-tag">JPA</span>
+                             </div>
+                             <div class="project-details">
+                                 <div class="project-section">
+                                     <h4><i class="fas fa-info-circle"></i> 프로젝트 내용</h4>
+                                     <p>SpringBoot와 Next.js를 활용한 모바일 데이터 거래 플랫폼입니다. 가상의 IP를 기반으로 WIFI 판매 상황에서 사용자들간의 소통을 위한 채팅 서비스를 제공합니다.</p>
+                                 </div>
+                                 <div class="project-section">
+                                     <h4><i class="fas fa-trophy"></i> 주요 성과</h4>
+                                     <ul>
+                                         <li>리뷰 API 개발</li>
+                                         <li>신고 API 개발</li>
+                                         <li>WebSocket STOMP 기반 채팅 서비스 개발</li>
+                                     </ul>
+                                 </div>
+                                 <div class="project-section">
+                                    <h4><i class="fas fa-chart-line"></i> 결과</h4>
+                                    <p>오토 스케일링에 의해 스케일 아웃이 되더라도 Redis Pub/Sub 기능을 활용하여 채팅 서비스를 유지할 수 있습니다.</p>
+                                    <p>코드 커버리지 80%를 달성한 만큼 자주 변동되는 변경사항에도 유연하게 대처할 수 있었습니다.</p>
+                                </div>
+                             </div>
+                             <div class="project-links">
+                                 <a href="https://github.com/URECA-Dapanda" class="project-link"><i class="fab fa-github"></i> GitHub</a>
+                             </div>
                         </div>
                     </div>
                     <div class="project-card">
                         <div class="project-image">
                             <i class="fas fa-tasks"></i>
                         </div>
-                        <div class="project-content">
-                            <h3>Task Management App</h3>
-                            <p>팀 협업을 위한 태스크 관리 애플리케이션입니다. 실시간 업데이트와 알림 기능을 제공합니다.</p>
-                            <div class="project-tech">
-                                <span class="tech-tag">Vue.js</span>
-                                <span class="tech-tag">Firebase</span>
-                                <span class="tech-tag">Socket.io</span>
-                            </div>
-                            <div class="project-links">
-                                <a href="#" class="project-link"><i class="fab fa-github"></i> GitHub</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-card">
-                        <div class="project-image">
-                            <i class="fas fa-chart-line"></i>
-                        </div>
-                        <div class="project-content">
-                            <h3>Data Visualization Dashboard</h3>
-                            <p>대용량 데이터를 시각화하는 대시보드입니다. D3.js를 활용한 인터랙티브 차트를 제공합니다.</p>
-                            <div class="project-tech">
-                                <span class="tech-tag">D3.js</span>
-                                <span class="tech-tag">Python</span>
-                                <span class="tech-tag">Flask</span>
-                            </div>
-                            <div class="project-links">
-                                <a href="#" class="project-link"><i class="fab fa-github"></i> GitHub</a>
-                            </div>
+                             <div class="project-content">
+                             <h3>LLM 기반 요금제 추천 플랫폼</h3>
+                             <div class="project-tech">
+                                 <span class="tech-tag">Spring Boot</span>
+                                 <span class="tech-tag">Spring AI</span>
+                                 <span class="tech-tag">Neo4J</span>
+                                 <span class="tech-tag">Open AI</span>
+                             </div>
+                             <div class="project-details">
+                                 <div class="project-section">
+                                     <h4><i class="fas fa-info-circle"></i> 프로젝트 내용</h4>
+                                     <p>기존 룰 기반 챗봇에서 자연어 기반으로 요금제를 추천하는 서비스입니다. 챗봇의 금칙어 필터링과 임베딩된 요금제에 대해 유사도 검색 결과를 사용자에게 제공합니다.</p>
+                                 </div>
+                                 <div class="project-section">
+                                     <h4><i class="fas fa-trophy"></i> 주요 성과</h4>
+                                     <ul>
+                                         <li>Neo4J Entity 설계</li>
+                                         <li>Spring AI 기반 ChatClient 설정</li>
+                                         <li>다중 ChatClient에 기반한 AI Agent 구현</li>
+                                         <li>다양한 요청에 유연한 대응을 위한 Tool Calling 구현</li>
+                                         <li>프롬프트 엔지니어링</li>
+                                     </ul>
+                                 </div>
+                                 <div class="project-section">
+                                     <h4><i class="fas fa-chart-line"></i> 결과</h4>
+                                     <p>요금제 이외의 요청이 들어오더라도 기계적인 응답이 아닌 자연스러운 응답과 유사도가 높은 요금제 목록을 반환합니다. 또한, 그래프 데이터베이스 활용으로 복잡한 추천 쿼리도 부담없이 적용할 수 있어 확장에 유연하게 대응이 가능합니다.</p>
+                                     <p>종합 프로젝트로 최우우상을 수상하였습니다.</p>
+                                 </div>
+                             </div>
+                             <div class="project-links">
+                                 <a href="https://github.com/ixi-U/ixi-U-be" class="project-link"><i class="fab fa-github"></i> GitHub</a>
+                             </div>
                         </div>
                     </div>
                 </div>
