remove: Contact 제거

--- a/index.html
+++ b/index.html
@@ -250,43 +250,10 @@
                 </div>
             </div>
         </section>
-
-        <!-- 연락처 섹션 -->
-        <section id="contact" class="contact">
-            <div class="container">
-                <h2 class="section-title">Contact</h2>
-                <div class="contact-content">
-                    <div class="contact-info">
-                        <div class="contact-item">
-                            <i class="fas fa-envelope"></i>
-                            <div>
-                                <h3>Email</h3>
-                                <p>developer@example.com</p>
-                            </div>
-                        </div>
-                        <div class="contact-item">
-                            <i class="fas fa-phone"></i>
-                            <div>
-                                <h3>Phone</h3>
-                                <p>+82 10-1234-5678</p>
-                            </div>
-                        </div>
-                        <div class="contact-item">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <div>
-                                <h3>Location</h3>
-                                <p>서울특별시, 대한민국</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
         <!-- 푸터 -->
         <footer class="footer">
             <div class="container">
-                <p>&copy; 2024 Portfolio. All rights reserved.</p>
+                <p>Tech is a tool for solving problems, not a goal</p>
             </div>
         </footer>
     </main>
