--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
                              <div class="project-details">
                                  <div class="project-section">
                                      <h4><i class="fas fa-info-circle"></i> 프로젝트 내용</h4>
-                                     <p>SpringBoot와 Next.js를 활용한 모바일 데이터 거래 플랫폼입니다. 가상의 IP를 기반으로 WIFI 판매 상황에서 사용자들간의 소통을 위한 채팅 서비스를 제공합니다.</p>
+                                     <p>SpringBoot와 Next.js를 활용한 모바일 데이터 거래 플랫폼입니다. </p>
+                                     <p>사용자들간의 원활한 거래 활동을 위해 상품 리뷰, 신고 API와 WebSocket을 활용한 채팅 기능을 개발하였습니다.</p>
                                  </div>
                                  <div class="project-section">
                                      <h4><i class="fas fa-trophy"></i> 주요 성과</h4>
@@ -222,8 +223,9 @@
                                  </div>
                                  <div class="project-section">
                                      <h4><i class="fas fa-chart-line"></i> 결과</h4>
-                                     <p>요금제 이외의 요청이 들어오더라도 기계적인 응답이 아닌 자연스러운 응답과 유사도가 높은 요금제 목록을 반환합니다. 또한, 그래프 데이터베이스 활용으로 복잡한 추천 쿼리도 부담없이 적용할 수 있어 확장에 유연하게 대응이 가능합니다.</p>
-                                     <p>종합 프로젝트로 최우우상을 수상하였습니다.</p>
+                                     <p>요금제 이외의 요청이 들어오더라도 기계적인 응답이 아닌 자연스러운 응답과 유사도가 높은 요금제 목록을 반환합니다. </p>
+                                     <p>또한, 그래프 데이터베이스 활용으로 복잡한 추천 쿼리에도 관계형 데이터베이스에 비해 30% 가량 성능 이점을 확보했습니다.</p>
+                                     <p>최종적으로 최우우상을 수상하였습니다.</p>
                                  </div>
                              </div>
                              <div class="project-links">
@@ -243,7 +245,7 @@
                     <div class="certificate-card">
                         <div class="certificate-content">
                             <h3>정보처리기사</h3>
-                            <p>정보처리기사</p>
+                            <p>과학기술정보통신부</p>
                             <span class="certificate-date">2025.06.12</span>
                         </div>
                     </div>
