--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
             <div class="certificate-card">
               <div class="certificate-content">
                 <h3>정보처리기사</h3>
-                <p>과학기술정보통신부</p>
+                <p>한국산업인력공단</p>
                 <span class="certificate-date">2025.06.12</span>
               </div>
             </div>
